Merge remote-tracking branch 'DuckNetwork/post-paginare' into post-paginare
# Conflicts:
#	src/main/java/ducknetwork/gui/DuckController.java
#	src/main/java/ducknetwork/repository/UserRepository.java
#	src/main/java/ducknetwork/service/NetworkService.java
#	src/main/java/ducknetwork/ui/Main.java
#	src/main/resources/gui/MainView.fxml